[gd_scene load_steps=12 format=3 uid="uid://bup6y4ts3o7hj"]

[ext_resource type="Script" uid="uid://b3eqjajqyvmhj" path="res://entities/objects/lever/lever.gd" id="1_n71q1"]
[ext_resource type="Texture2D" uid="uid://bby7can6gxjw" path="res://assets/sprites/objects/lever_turned_left.png" id="2_e3321"]
[ext_resource type="Texture2D" uid="uid://c3np11m5sden1" path="res://assets/sprites/objects/lever_turned_right.png" id="3_rfg5b"]
[ext_resource type="PackedScene" uid="uid://bdhst7l51m64h" path="res://entities/controllers/audio_controller/audio_controller.tscn" id="4_wnnf8"]
[ext_resource type="AudioStream" uid="uid://d005iesuln7b5" path="res://assets/sounds/sfx/effects/button-pressed.wav" id="5_0p1a6"]
[ext_resource type="PackedScene" uid="uid://c124cocjpi4gk" path="res://entities/others/connection_entity/activator.tscn" id="6_w11u3"]
[ext_resource type="PackedScene" uid="uid://cohe1v5ox0bt0" path="res://entities/hud/floating_key/floating_key.tscn" id="7_eg4kx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4kpur"]
atlas = ExtResource("2_e3321")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bn6n"]
atlas = ExtResource("3_rfg5b")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_psna3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kpur")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bn6n")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_accve"]
size = Vector2(40, 24)

[node name="Lever" type="CharacterBody2D" groups=["InteractableObject"]]
script = ExtResource("1_n71q1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_psna3")
animation = &"off"

[node name="InteractiveZone" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveZone"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_accve")

[node name="AudioController" parent="." instance=ExtResource("4_wnnf8")]

[node name="Pushed" type="AudioStreamPlayer2D" parent="AudioController"]
stream = ExtResource("5_0p1a6")
max_distance = 250.0
bus = &"SFX"

[node name="Activator" parent="." instance=ExtResource("6_w11u3")]

[node name="FloatingKey" parent="." instance=ExtResource("7_eg4kx")]
offset_top = -14.0
offset_bottom = -14.0
action = "interact"

[connection signal="body_entered" from="InteractiveZone" to="." method="_on_interactive_zone_player_entered"]
[connection signal="body_exited" from="InteractiveZone" to="." method="_on_interactive_zone_player_exited"]
